--- a/estilo.css
+++ b/estilo.css
@@ -7,7 +7,7 @@ a{
 }
 img{
     height: fit-content;
-    opacity: 0.5 !importan;
+    opacity: 0.5;
 }
 
 .black{
@@ -15,10 +15,6 @@ img{
     font-size: x-large;
 }
 
-.fundo{
-    background: rgba(255,255,255, 0.4);
-    border-radius: 20px;
-}
 
 h2{
     font-size: 27px !important;
